[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Images/item_placeholder.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Items/Potion.tres" type="Resource" id=2]
[ext_resource path="res://src/Systems/Interact/Pickable/Pickable.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.18985, 8.17109 )

[node name="Pickable" type="Area2D"]
script = ExtResource( 3 )
has_trigger = true
item = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.203907 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
